--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <img src="./images/place-kosa.jpg" class="place__image" alt="Куршская коса">
         <div class="place__website">
           <span class="place__url-heading">URL</span>
-          <a href="park-kosa.ru" target="_blank" class="place__link">park-kosa.ru</a>
+          <a href="http://park-kosa.ru" target="_blank" class="place__link">park-kosa.ru</a>
         </div>
         <div class="place__paragraphs">
           <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
@@ -73,7 +73,7 @@
         <img src="./images/place-kolsky.jpg" class="place__image" alt="Кольский">
         <div class="place__website">
           <span class="place__url-heading">URL</span>
-          <a href="https://nat-geo.ru/ng-club/phototour/na-kolskiy-poluostrov-s-shef-fotografom-national-geographic-rossiya/" target="_blank" class="place__link">National Geographic</a>
+          <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank" class="place__link">National Geographic</a>
         </div>
         <div class="place__paragraphs">
           <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
@@ -86,7 +86,7 @@
         <img src="./images/place-altai.jpg" class="place__image" alt="Алтай">
         <div class="place__website">
           <span class="place__url-heading">URL</span>
-          <a href="#" target="_blank" class="place__link">Facebook</a>
+          <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank" class="place__link">Facebook</a>
         </div>
         <div class="place__paragraphs">
           <p class="place__paragraph">Алтай — одно из красивейших мест в России. 
@@ -127,20 +127,20 @@
     </section>
 
     <section class="cover page__cover">
-      <div class="cover__background">
+      <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__background">
         <h2 class="cover__title">До Байкала «на собаках»</h2>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-      </div>
+      </a>
     </section>
   </main>
 
   <footer class="footer page__footer">
     <nav class="footer__links">
-      <a href="#" class="footer__link" target="_blank">Карты</a>
-      <a href="#" class="footer__link" target="_blank">Погода</a>
-      <a href="#" class="footer__link" target="_blank">Расписание</a>
-      <a href="#" class="footer__link" target="_blank">Календарь</a>
-      <a href="#" class="footer__link" target="_blank">Путешествия</a>
+      <a href="https://yandex.ru/maps" class="footer__link" target="_blank">Карты</a>
+      <a href="https://yandex.ru/pogoda" class="footer__link" target="_blank">Погода</a>
+      <a href="https://rasp.yandex.ru" class="footer__link" target="_blank">Расписание</a>
+      <a href="https://calendar.yandex.ru" class="footer__link" target="_blank">Календарь</a>
+      <a href="https://travel.yandex.ru" class="footer__link" target="_blank">Путешествия</a>
    </nav>
     <p class="footer__copyright">&copy; 2021. Федорович Маргарита</p>
   </footer>
