Fixed html and fonts

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   
   <header class="header page__header">
     <div class="header__logo"></div>
-    <ul class="header__link-zone">
+    <div class="header__link-zone">
       <a href="#" class="header__lang-link">Ru</a>
       <a href="#" class="header__lang-link">Eng</a>
-    </ul>
+    </div>
   </header>
 
   <main>
