--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <header class="header page__header">
     <div class="header__logo"></div>
     <div class="header__link-zone">
-      <a href="#" class="header__lang-link">Ru</a>
-      <a href="#" class="header__lang-link">Eng</a>
+      <a href="#" class="header__lang-link header__lang-link_selected">Ru</a>
+      <a href="#" class="header__lang-link">En</a>
     </div>
   </header>
 
@@ -29,11 +29,11 @@
       <h2 class="intro__title">Чего мы там не видели?</h2>
       <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
       <ul class="intro__list">
-        <li class="intro__list-item">Часовых поясов 11</li>
-        <li class="intro__list-item">Объектов природного наследия ЮНЕСКО 12</li>
-        <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО 16</li>
-        <li class="intro__list-item">Природных заповедников 105</li>
-        <li class="intro__list-item">Аэропортов 241</li>
+        <li class="intro__list-item"><span class="intro__list-bold">Часовых поясов</span> 11</li>
+        <li class="intro__list-item"><span class="intro__list-bold">Объектов природного наследия ЮНЕСКО</span> 12</li>
+        <li class="intro__list-item"><span class="intro__list-bold">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+        <li class="intro__list-item"><span class="intro__list-bold">Природных заповедников</span> 105</li>
+        <li class="intro__list-item"><span class="intro__list-bold">Аэропортов</span> 241</li>
       </ul>
     </section>
 
@@ -55,37 +55,37 @@
 
     <section class="places page__places">
 
-      <div class="place">
+      <article class="place">
         <h3 class="place__title">Куршская коса</h3>
         <img src="./images/place-kosa.jpg" class="place__image" alt="Куршская коса">
         <div class="place__website">
-          <span class="place__url-heading">URL</span>
+          <span class="place__url-heading">url</span>
           <a href="http://park-kosa.ru" target="_blank" class="place__link">park-kosa.ru</a>
         </div>
         <div class="place__paragraphs">
           <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
           <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
         </div>
-      </div>
+      </article>
 
-      <div class="place">
+      <article class="place">
         <h3 class="place__title">Кольский</h3>
         <img src="./images/place-kolsky.jpg" class="place__image" alt="Кольский">
         <div class="place__website">
-          <span class="place__url-heading">URL</span>
+          <span class="place__url-heading">url</span>
           <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank" class="place__link">National Geographic</a>
         </div>
         <div class="place__paragraphs">
           <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
           <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
         </div>
-      </div>
+      </article>
 
-      <div class="place">
+      <article class="place">
         <h3 class="place__title">Алтай</h3>
         <img src="./images/place-altai.jpg" class="place__image" alt="Алтай">
         <div class="place__website">
-          <span class="place__url-heading">URL</span>
+          <span class="place__url-heading">url</span>
           <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank" class="place__link">Facebook</a>
         </div>
         <div class="place__paragraphs">
@@ -93,13 +93,13 @@
             В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
           <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
         </div>
-      </div>
+      </article>
 
-      <div class="place">
+      <article class="place">
         <h3 class="place__title">Зимний Байкал</h3>
         <img src="./images/place-winter-baikal.jpg" class="place__image" alt="Зимний Байкал">
         <div class="place__website">
-          <span class="place__url-heading">URL</span>
+          <span class="place__url-heading">url</span>
           <a href="https://vk.com/baikalmile" target="_blank" class="place__link">https://vk.com/baikalmile</a>
         </div>
         <div class="place__paragraphs">
@@ -108,13 +108,13 @@
           <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя 
             к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
         </div>
-      </div>
+      </article>
 
-      <div class="place">
+      <article class="place">
         <h3 class="place__title">Карелия</h3>
         <img src="./images/place-karelia.jpg" class="place__image" alt="Карелия">
         <div class="place__website">
-          <span class="place__url-heading">URL</span>
+          <span class="place__url-heading">url</span>
           <a href="http://vodlozero.ru/" target="_blank" class="place__link">http://vodlozero.ru/</a>
         </div>
         <div class="place__paragraphs">
@@ -122,7 +122,7 @@
             В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
             в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
         </div>
-      </div>
+      </article>
 
     </section>
 
